[gd_scene load_steps=15 format=3 uid="uid://y2yd80nnv5g"]

[ext_resource type="Script" path="res://scripts/loadingInGame.gd" id="1_qmya1"]
[ext_resource type="Texture2D" uid="uid://djl3nlainq3p8" path="res://assets/blackGround.png" id="2_c7rqe"]
[ext_resource type="Resource" uid="uid://bgf874d5pogey" path="res://resources/sceneManager.tres" id="2_nn8eg"]
[ext_resource type="FontFile" uid="uid://dj6c257nh4vvu" path="res://assets/font/PixelifySans-Medium.ttf" id="3_2ds86"]
[ext_resource type="Texture2D" uid="uid://crxu4irm0kx5m" path="res://assets/uav/uavdrone_idle.png" id="4_ntfqd"]

[sub_resource type="Theme" id="Theme_ikg45"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow4mp"]
bg_color = Color(0.792157, 0.87451, 0.878431, 1)
border_color = Color(0.792157, 0.87451, 0.878431, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_84s6i"]
atlas = ExtResource("4_ntfqd")
region = Rect2(0, 0, 528, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_km4sm"]
atlas = ExtResource("4_ntfqd")
region = Rect2(528, 0, 528, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmt2x"]
atlas = ExtResource("4_ntfqd")
region = Rect2(1056, 0, 528, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_64alb"]
atlas = ExtResource("4_ntfqd")
region = Rect2(1584, 0, 528, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ypdo"]
atlas = ExtResource("4_ntfqd")
region = Rect2(2112, 0, 528, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_poe4f"]
atlas = ExtResource("4_ntfqd")
region = Rect2(2640, 0, 528, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ihwwp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84s6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km4sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmt2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64alb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ypdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poe4f")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Loading" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qmya1")
sceneManager = ExtResource("2_nn8eg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_c7rqe")

[node name="Progress" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 677.0
offset_right = 1251.0
offset_bottom = 692.0
theme = SubResource("Theme_ikg45")
theme_override_styles/fill = SubResource("StyleBoxFlat_ow4mp")
show_percentage = false

[node name="loadText" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 634.0
offset_right = 598.0
offset_bottom = 672.0
theme_override_colors/background_color = Color(0.0627451, 0.0588235, 0.121569, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2ds86")
theme_override_font_sizes/font_size = 24
text = "Loading"
placeholder_text = "Place here
"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
scroll_fit_content_height = true
use_default_word_separators = false

[node name="minidrone" type="AnimatedSprite2D" parent="."]
position = Vector2(1023, 638)
sprite_frames = SubResource("SpriteFrames_ihwwp")
autoplay = "default"
frame_progress = 0.58204

[node name="waitEnd" type="Timer" parent="."]
one_shot = true

[node name="artiload" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="waitEnd" to="." method="_on_wait_end_timeout"]
[connection signal="timeout" from="artiload" to="." method="_on_artiload_timeout"]
